<resources>
    <string name="app_name">Phone Blocker</string>
    <string name="label_admin_receiver">Admin Receiver</string>
    <string name="description_admin_receiver">This permission is used to lock the device for specified amount of time</string>
    <string name="blocker_service_notification_content_title">You cannot use your phone</string>
    <string name="default_notification_channel_name">Default Notifications</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="ok">OK</string>
    <string name="lock_device_button_text">Lock device for %d hrs %d mins and %d secs</string>
    <string name="x_hrs">%d hr</string>
    <string name="x_min">%d min</string>
    <string name="x_secs">%d secs</string>
    <string name="title_activity_appreciation">AppreciationActivity</string>
    <string name="finishing_up">Finishing up…</string>
    <string name="done">Done</string>
    <string name="select_duration">Select Duration:</string>
    <string name="prevent_phone_calls_description">Reject all the call automatically. World can wait for few hours</string>
    <string name="prevent_phone_calls">Prevent Phone calls</string>
    <string name="prevent_notifications_description">Notifications are the biggest distractions. Block them during lock time</string>
    <string name="prevent_notifications">Prevent Notifications</string>
    <string name="prevent_power_off_descriptions">This helps the app to better control your device during lock time</string>
    <string name="prevent_power_off">Prevent Power Off (recommended)</string>
    <string name="about">About</string>
    <string name="contact_us">For any suggestions please mail us at sickboydroid@gmail.com</string>
    <string name="app_motive_description">We made this app for the people who find it difficult to overcome the addiction of using smartphone. We hope you liked it</string>
    <string name="great_work">Great Work!</string>
    <string name="saving_up_your_progress">Saving up your progress…</string>
    <string name="finish">Finish</string>
    <string name="hour_limit_exceeded">You can only lock your device for maximum of 16 hours</string>
    <string name="granted">Already Granted!</string>
    <string name="grant">Grant Permission</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="permissions">Permissions</string>
    <string name="device_admin_permission">Device Admin Permission</string>
    <string name="start_on_boot_permission">Start on boot permission</string>
    <string name="permissions_needed_title">We need following permissions before we proceed:</string>
    <string name="tagline">let\'s overcome smartphone addiction</string>
    <string name="remaining_time_format">%02d : %02d : %02d</string>
    <string name="display_over_other_apps">Display Over Other Apps</string>
</resources>