<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:gravity="center"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".activities.AppreciationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/great_work"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pb_loading"
        android:layout_width="290dp"
        android:layout_height="14dp" />

    <TextView
        android:id="@+id/tv_progress_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saving_up_your_progress"
        android:padding="7dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/btn_finish"
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:padding="7dp"
        android:text="@string/finish" />
</LinearLayout>