<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions_needed_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:paddingHorizontal="7dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/device_admin_permission"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_grant_admin_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grant"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/display_over_other_apps"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_grant_overlay_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grant"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/start_on_boot_permission"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_grant_boot_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grant"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>